all boundaries done

--- a/anothertest.html
+++ b/anothertest.html
@@ -59,7 +59,7 @@ map.fitBounds(bounds);
 
         L.marker([44.988286, -93.156694]).addTo(map)
 		.bindPopup('6')
-		.openPopup(); */
+		.openPopup(); 
 
         L.marker([44.992049, -93.156694]).addTo(map)
 		.bindPopup('7')
@@ -105,7 +105,7 @@ map.fitBounds(bounds);
         L.marker([44.906399, -93.135408]).addTo(map)
 		.bindPopup('16')
 		.openPopup();
-/*
+
         L.marker([44.893591, -93.153098]).addTo(map)
 		.bindPopup('17')
 		.openPopup();
@@ -189,7 +189,7 @@ map.fitBounds(bounds);
 		]).addTo(map);
 
         L.marker([44.912619, -93.177302]).addTo(map)
-		.bindPopup('Highland Park')
+		.bindPopup('Highland')
 		.openPopup();
 
         var highlandParkBoundry = L.polygon([
@@ -210,7 +210,7 @@ map.fitBounds(bounds);
         ]).addTo(map);
 
         L.marker([44.934333, -93.167037]).addTo(map)
-		.bindPopup('Macalester - Groveland')
+		.bindPopup('Macalester-Groveland')
 		.openPopup();
 
         var macGrovelandBoundry = L.polygon([
@@ -228,7 +228,7 @@ map.fitBounds(bounds);
 		.bindPopup('Union Park')
 		.openPopup();
 
-        var macGrovelandBoundry = L.polygon([
+        var unionParkBoundry = L.polygon([
         [44.941646, -93.200468],
         [44.941320, -93.152660],
         [44.955724, -93.146932],//top right
@@ -241,7 +241,7 @@ map.fitBounds(bounds);
         ]).addTo(map);
 
         L.marker([44.969538, -93.197965]).addTo(map)
-		.bindPopup('St. Anthony Park')
+		.bindPopup('St. Anthony')
 		.openPopup();
 
         var stAnthonyParkBoundry = L.polygon([
@@ -286,7 +286,7 @@ map.fitBounds(bounds);
         ]).addTo(map);
 
         L.marker([44.962902, -93.167076]).addTo(map)
-		.bindPopup('Midway')
+		.bindPopup('Hamline/Midway')
 		.openPopup();
 
         var midwayBoundry = L.polygon([
@@ -302,7 +302,7 @@ map.fitBounds(bounds);
         ]).addTo(map);
 
         L.marker([44.959457, -93.120456]).addTo(map)
-		.bindPopup('Thomas-Dale')
+		.bindPopup('Thomas/Dale(Frogtown)')
 		.openPopup();
 
         var thomasDaleBoundry = L.polygon([
@@ -339,7 +339,7 @@ map.fitBounds(bounds);
         ]).addTo(map);
 
         L.marker([44.977491, -93.065931]).addTo(map)
-		.bindPopup('Payne - Phalen')
+		.bindPopup('Payne/Phalen')
 		.openPopup();
 
         var ppBoundry = L.polygon([
@@ -372,6 +372,135 @@ map.fitBounds(bounds);
         [44.974045, -93.045419] //pointy bit
         ]).addTo(map);
 
+        L.marker([44.954975, -93.061132]).addTo(map)
+		.bindPopup("Dayton's Bluff")
+		.openPopup();
+
+        var DBBoundry = L.polygon([
+        [44.974045, -93.045419], //pointy bit
+        [44.968001, -93.050610],
+        [44.965591, -93.065858],
+        [44.967159, -93.070021],
+        [44.966683, -93.072111],
+        [44.962067, -93.072712],
+        [44.960731, -93.076231],
+        [44.956844, -93.076660],
+        [44.954050, -93.082153],
+        [44.955690, -93.084041], //from pp
+        [44.955847, -93.090582], //from pp
+        [44.952566, -93.087522], 
+        [44.952753, -93.082368], 
+        [44.946612, -93.078992],
+        [44.947171, -93.071739], 
+        [44.942531, -93.058357],
+        [44.947192, -93.040392],
+        [44.957651, -93.039512],
+        [44.957758, -93.037752],
+        [44.960485, -93.037752],
+        [44.960489, -93.039529],
+        [44.963287, -93.046195],
+        [44.972457, -93.043792]
+        ]).addTo(map);
+
+        L.marker([44.951619, -93.126488]).addTo(map)
+		.bindPopup("Summit/University")
+		.openPopup();
+
+        var SUBoundary = L.polygon([
+            [44.941320, -93.152660],//bottom left
+            [44.955724, -93.146932],//top left
+            [44.955813, -93.109212],//small box
+            [44.954963, -93.109212],//^^
+            [44.950615, -93.109693],//down 
+            [44.950523, -93.105358],//right
+            [44.945056, -93.110079],//down left
+            [44.944540, -93.108749],//down right
+            [44.941199, -93.118190],//down left
+        ]).addTo(map);
+
+        L.marker([44.937493, -93.137083]).addTo(map)
+		.bindPopup("Summit Hill")
+		.openPopup();
+
+        var SHBoundary = L.polygon([
+        [44.941320, -93.152660],
+        [44.934059, -93.149528],
+        [44.931963, -93.146652],
+        [44.931294, -93.143820],
+        [44.930231, -93.141932],
+        [44.931963, -93.130688],
+        [44.941352, -93.112154],
+        [44.941199, -93.118190]
+        ]).addTo(map);
+
+        L.marker([44.927909, -93.127797]).addTo(map)
+		.bindPopup("West Seventh")
+		.openPopup();
+
+        var westSeventhBoundary = L.polygon([
+        [44.926902, -93.144686],//2
+        [44.915476, -93.144686],//3
+        [44.908608, -93.155501],//4
+        [44.905143, -93.153613],//5
+        [44.911039, -93.144000],//6
+        [44.904048, -93.138936],//7
+        [44.906399, -93.135408],//16
+        [44.919649, -93.128541],//15
+		[44.942319, -93.091489],//up right
+        [44.943986, -93.092470],//under downtown
+        [44.943661, -93.100346],//^^
+        [44.941352, -93.112154],//^^
+        [44.931963, -93.130688],
+        [44.930231, -93.141932]
+        ]).addTo(map);
+
+        L.marker([44.929972, -93.078387]).addTo(map)
+		.bindPopup("West Side")
+		.openPopup();
+
+        var westSideBoundary = L.polygon([
+        [44.919649, -93.128541],//15
+		[44.942319, -93.091489],//up right
+        [44.946558, -93.078902],//follow river
+        [44.947171, -93.071739],
+        [44.942531, -93.058357],//change
+        [44.932402, -93.049891],//last river point
+        [44.919406, -93.050607],//10
+		[44.919893, -93.090948],//11
+		[44.923417, -93.091119],//12
+		[44.923296, -93.096269],//13
+		[44.919771, -93.096097]//14
+        ]).addTo(map);
+
+        L.marker([44.950810, -93.093836]).addTo(map)
+		.bindPopup("Capitol River")
+		.openPopup();
+        
+        var capitolRiverBoundary = L.polygon([
+        [44.955847, -93.090582], //from pp
+        [44.952566, -93.087522], 
+        [44.952753, -93.082368], 
+        [44.946612, -93.078992],//end db
+        [44.942319, -93.091489],//up right
+        [44.943986, -93.092470],//under downtown
+        [44.943661, -93.100346],//^^
+        [44.941352, -93.112154],//^^
+        [44.941199, -93.118190],//last of summit hill
+        [44.944540, -93.108749],
+        [44.945056, -93.110079],
+        [44.950523, -93.105358],
+        [44.950615, -93.109693],
+        [44.954963, -93.109212],//end small box
+        [44.954933, -93.105951],
+        [44.955874, -93.105908],
+        [44.955935, -93.097410],
+        [44.958000, -93.090801],
+        [44.963557, -93.091273],
+        ]).addTo(map);
+
+        L.marker([44.935056, -93.027985]).addTo(map)
+		.bindPopup("Conway/Battlecreek/Highwood")
+		.openPopup();
 </script>
 </body>
 </html>
