Added address bar and search button

--- a/anothertest.html
+++ b/anothertest.html
@@ -11,10 +11,28 @@
 
 <link href='https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.css' rel='stylesheet' />
 
-
+<script type='application/javascript'> 
+    var app;
+    var ws;
+    function Init(){
+        app = new Vue({
+            el: "#address",
+            data: {
+                address: "",
+            }
+        });
+    }
+    function Submit() {
+        
+    }
+</script>
 
 </head>
-<body>
+<body onload="Init()">
+    <div id="address">
+        <input type="text" v-model="address" placeholder="Enter Address" />
+        <button type="button" @click="Submit">Search</button>
+    </div>
 <div id='map'></div>
 
 <script>
