--- a/Almost final/index.html
+++ b/Almost final/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <div id="crimeTable">
-    <table v-if="search_results.length > 0">
+    <table>
         <thead>
             <tr>
                 <th> Case Number </th>
@@ -35,7 +35,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr v-for="crime in search_results">
+            <tr v-for="crime in data">
                 <td> {{ crime.case_number }}</td>
                 <td> {{ crime.incident }} </td>
                 <td> {{ crime.date }} </td>
