--- a/Final Final test/about.html
+++ b/Final Final test/about.html
@@ -66,6 +66,9 @@
             <li>
                 Of the 42 shoplifting under 500 dollar incidents, Union park had 16.
             </li>
+            <li>
+                You can see the buidings we made this project in the lower left side of union park
+            </li>
         </ul>
     </div>
     <div id="youtubeVideo">
