--- a/Final Final test/about.html
+++ b/Final Final test/about.html
@@ -71,11 +71,10 @@
             </li>
         </ul>
     </div>
-    <div id="youtubeVideo">
-        <iframe width="420" height="315"
-            src="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-        </iframe>
+    <div >
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wm-c9hZtjm8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    
     <button id = 'button' type = "button" onclick="window.location.href = 'http://localhost:8000' ">GO BACK YOU DONT WANT TO READ THIS ANYMORE</button>
     
 </body>
