--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/wm-c9hZtjm8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
-    <button id = 'button' type = "button" onclick="window.location.href = 'http://localhost:8000' ">GO BACK YOU DONT WANT TO READ THIS ANYMORE</button>
+    <button id = 'button' type = "button" onclick="window.location.href = 'http://cisc-dean.stthomas.edu:8031' ">GO BACK YOU DONT WANT TO READ THIS ANYMORE</button>
     
 </body>
 <html>
